Sun Aug 02 22:58:00 1998  George Lebl  <jirka@5z.com>

	* gtk/gtkclist.c: draw the buttons during a "draw" as well,
	  this fixes a bug when the whole widget is made non-sesitive
	  the buttons weren't redrawn

Mon Aug  3 00:04:09 1998  Lars Hamann  <lars@gtk.org>

	* gtk/gtkclist.c (abort_column_resize): reset drag_pos after abort
	* gtk/gtkclist.c (gtk_clist_key_press): removed a few unneeded lines
	* gtk/gtkcombo.c (gtk_combo_list_key_press): fixed compiler warning

Sun Aug  2 03:08:07 1998  Owen Taylor  <otaylor@gtk.org>

	* gdk/gdkwindow.c (gdk_window_reparent): Change 
	  window_private->parent pointer when reparenting.

Sat Aug  1 22:17:00 1998  Raph Levien  <raph@acm.org>

	* gdk/gdkrgb.c: made some minor config changes to unify GdkRgb
	with the standalone release.

Fri Jul 31 20:45:07 1998  Lars Hamann  <lars@gtk.org>

	* gtk/gtkclist.c (gtk_clist_button_press) (gtk_clist_motion)
	(gtk_clist_button_release) (new_column_width): Few fixes for
	column resize. Store resize column in clist->drag_pos.

Thu Jul 31 15:18:36 1998  Lars Hamann  <lars@gtk.org>

	* gtk/gtkctree.h 
	* gtk/gtkctree.c 
	* gtk/testgtk.c : New typedef GtkCTreeNode, changed all GList *node
	to GtkCTreeNode *node.

	* gtk/gtklist.h : added extended selection mode and auto scrolling.
	(struct _GtkList): removed unneeded variables timer, button,
	selection_start_pos, selection_end_pos, scroll_direction, have_grab.
 	Added new variables undo_selection, undo_unselection, last_focus_child,
 	undo_focus_child, htimer, vtimer, anchor, drag_pos, anchor_state,
 	drag_selection, add_mode.
 
 	New functions :
 	(gtk_list_extend_selection), (gtk_list_start_selection),
 	(gtk_list_end_selection), (gtk_list_select_all),
 	(gtk_list_unselect_all), (gtk_list_scroll_horizontal),
 	(gtk_list_scroll_vertical), (gtk_list_toggle_add_mode),
 	(gtk_list_toggle_focus_row), (gtk_list_toggle_row),
 	(gtk_list_undo_selection), (gtk_list_end_drag_selection)
        
	* gtk/gtklist.c : 