@@ -1,3 +1,9 @@
+1998-08-03  Federico Mena Quintero  <federico@nuclecu.unam.mx>
+
+	* gtk/gtkctree.c (gtk_ctree_find_by_row_data_custom): New public
+	function to find a row by its data pointer using a custom
+	comparison function.
+
 Sun Aug 02 22:58:00 1998  George Lebl  <jirka@5z.com>
 
 	* gtk/gtkclist.c: draw the buttons during a "draw" as well,
