@@ -222,6 +222,10 @@ gboolean   gtk_ctree_is_ancestor             (GtkCTree     *ctree,
 GtkCTreeNode * gtk_ctree_find_by_row_data    (GtkCTree     *ctree,
 					      GtkCTreeNode *node,
 					      gpointer      data);
+GtkCTreeNode * gtk_ctree_find_by_row_data_custom (GtkCTree     *ctree,
+						  GtkCTreeNode *node,
+						  gpointer      data,
+						  GCompareFunc  func);
 gboolean   gtk_ctree_is_hot_spot             (GtkCTree     *ctree,
 					      gint          x,
 					      gint          y);
